--- a/index.html
+++ b/index.html
@@ -36,12 +36,69 @@
     <!-- Hero Section -->
     <section class="hero-container">
         <div class="hero-left">
-            <img src="/images/banner.jpg" alt="three people sitting togethrt"> 
+            <img src="/images/banner.jpg" alt="three people sitting togethrt" /> 
         </div>
         <div class="hero-right">
             <h1 class="hero-title">Learn something new everyday</h1>
             <p class="hero-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <a href="#" class="hero-btn">Start here</a>
+        </div>
+    </section>
+
+    <!-- Info Section -->
+    <section class="info-container">
+        <article class="info-left">
+            <div class="info-left-image">
+                <img src="/images/information-main.jpg" alt="men-redding-a-book" />
+            </div>
+            <div class="info2-left">
+                <h2 class="info-left">It doesn't hurt to keep practicing</h2>
+                <p class="info-description"> "Curavito vitae libero in ipsum porttitor consequat. 
+                    Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. 
+                    Phasellus sed consequat ex. Etiam eget magna laoreet, efficur dolor consequat, 
+                    tristique ligula."</p>
+                <p class="info-writer"> Emanuel, Sr Strategist at Hiring.com </p>
+            </div>
+        </article>
+        <div class="info-right">
+            <ul class="info-container">
+                <!-- Orientation -->
+                <li>
+                    <div class="info-right-img">
+                        <img class="info-right-img-desktop" src="images/information-orientation.jpg" alt="walking-people" />
+                        <img class="info-right-img-mobile" src="images/information-orientation-mobile.jpg" alt="walking-people" />
+                    </div>
+                    <div class="info-right-content">
+                        <h3 class="info-right-tittle">Orientation data</h3>
+                        <p class="info-right-description">Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                    </div>
+                        <a class="info-right-link" href="#">Read more</a>  
+                </li>
+                <!-- Campus -->
+                <li>
+                    <div class="info-right-img">
+                        <img class="info-right-img-desktop" src="images/information-campus.jpg" alt="class-room" />
+                        <img class="info-right-img-mobile" src="images/information-campus-mobile.jpg" alt="class-room" />
+                    </div>
+                    <div class="info-right-content">
+                        <h3 class="info-right-tittle">Our campus</h3>
+                        <p class="info-right-description">Find which campus is close by</p>
+                    </div>
+                        <a class="info-right-link" href="#">Read more</a>  
+                </li>
+                <!-- Guest -->
+                <li>
+                    <div class="info-right-img">
+                        <img class="info-right-img-desktop" src="images/information-guest-lecture.jpg" alt="lecture" />
+                        <img class="info-right-img-mobile" src="images/information-guest-lecture-mobile.jpg" alt="lecture" />
+                    </div>
+                    <div class="info-right-content">
+                        <h3 class="info-right-tittle">Our guest lecture</h3>
+                        <p class="info-right-description">Join a keynote with Oliver Sack about music in medical treatment</p>
+                    </div>
+                        <a class="info-right-link" href="#">Read more</a>  
+                </li>
+            </ul>
         </div>
     </section>
 
