--- a/index.html
+++ b/index.html
@@ -102,6 +102,80 @@
         </div>
     </section>
 
+    <!-- Course Section -->
+     <section class="course-container">
+        <h1 class="c-grid-wrapper"> </h1>
+            <!-- Software engineering -->
+            <div class="c-1">
+                <div class="c-img">
+                    <img src="images/course-software.jpg" alt="" />
+                </div>
+                <div class="c-info">
+                    <h4>Software engineering</h4>
+                    <p>COURSES</p>
+                    <p>Web development</p>
+                </div>
+            </div>
+            <!-- Computer art -->
+            <div class="c-2">
+                <div class="c-img">
+                    <img src="images/course-computer-art.jpg" alt="" />
+                </div>
+                <div class="c-info">
+                    <h4>Computer art</h4>
+                    <p>COURSES</p>
+                    <p>Imaging & Design, Web Design</p>
+                </div>
+            </div>
+            <!-- Design -->
+            <div class="c-3">
+                <div class="c-img">
+                    <img src="images/course-design.jpg" alt="" />
+                </div>
+                <div class="c-info">
+                    <h4>Design</h4>
+                    <p>COURSES</p>
+                    <p>UX/UI Design</p>
+                </div>
+            </div>
+            <!-- Data -->
+            <div class="c-4">
+                <div class="c-img">
+                    <img src="images/course-data.jpg" alt="" />
+                </div>
+                <div class="c-info">
+                    <h4>Data</h4>
+                    <p>COURSES</p>
+                    <p>Data Science, Big Data,</p>
+                </div>
+            </div>
+            <!-- Business -->
+            <div class="c-5">
+                <div class="c-img">
+                    <img src="images/course-business.jpg" alt="" />
+                </div>
+                <div class="c-info">
+                    <h4>Business</h4>
+                    <p>COURSES</p>
+                    <p>Product Development, Business Development, Startup</p>
+                </div>
+            </div>
+            <!-- Marketing -->
+            <div class="c-6">
+                <div class="c-img">
+                    <img src="images/course-marketing.jpg" alt="" />
+                </div>
+                <div class="c-info">
+                    <h4>Marketing</h4>
+                    <p>COURSES</p>
+                    <p>Analytics, Content Marketing, Mobile Marketing</p>
+                </div>
+            </div>
+
+
+
+     </section>
+
      </main>
 </body>
 </html>
