--- a/index.html
+++ b/index.html
@@ -171,12 +171,62 @@
                     <p>Analytics, Content Marketing, Mobile Marketing</p>
                 </div>
             </div>
-
-
-
      </section>
+     <!-- Thesis Section -->
+      <section class="thesis-container">
+        <h1>Thesis exhibit</h1>
+        <div class="thesis-grid">
+            <div class="reimagine-video">
+                <div class="thesis-left-video">
+                    <video src="videos/thesis.mp4" controls></video> 
+                </div>
+                <div class="reimagine">
+                    <h4>Reimagine urban</h4>
+                    <p>"Curavito vitae libero in ipsum porttitor consequat. 
+                        Aliquam et commodo lectus, nec consequat neque. 
+                        Sed non accumsan urna. Phasellus sed consequat ex. 
+                        Etiam eget magna laoreet, efficur dolor consequat, 
+                        tristique ligula."
+                    </p>
+                </div>
+            </div>
+            <div class="thesis-container-right">
+                <!-- Fisma -->
+                <div class="fisma">
+                        <div class="fish-img">
+                            <img src="images/thesis-fisma.jpg" alt="Someone highlighting text on paper" />
+                        </div>
+                        <div class="fisma-info">
+                            <h4>Fisma: Design and Prototype</h4>
+                            <p>Designer showcase</p>
+                        </div>            
+                </div>
 
+                <!-- Now Then -->
+                <div class="now-then">
+                    <div class="now-then-img">
+                        <img src="images/thesis-now-and-then.jpg" alt="Someone highlighting text on paper" />
+                    </div>
+                    <div class="now-then-info">
+                        <h4>Now and then</h4>
+                        <p>Research study about New York</p>
+                    </div>            
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>@ 2016 Colmar Academy. All rights reserved</p>
+        <ul>
+            <a href=""><li>Terms</li></a>
+            <a href=""><li>Privacy</li></a>
+        </ul>
+    </footer>
      </main>
 </body>
 </html>
+
+
 
