--- a/index.html
+++ b/index.html
@@ -1,232 +1,274 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Colmar Academy</title>
-</head>
-<body>
-    <!-- Header Section Desktop -->
-     <header>
-        <nav class="desktop-nav">
-            <div class="logo-container">
-                <img src="/images/ic-logo.svg" alt="Colmar-academy-logo">
-                <p class="logo-name"><span>COLMAR</span>ACADEMY</p>
-            </div>
-            <ul class="nac-link-container">
-                <li><a href="#">On campus</a></li>
-                <li><a href="#">Online</a></li>
-                <li><a href="#">For companies</a></li>
-                <li><a href="#">Sign in</a></li>
-            </ul>
-        </nav>
-    <!-- Header Section Mobile -->
-        <nav class="mobile-nav">
-            <ul class="nav-link-container">
-                <li><a href="#"><img src="./images/ic-logo.svg" alt="Colmar academy logo"/></a></li>
-                <li><a href="#"><img src="./images/ic-on-campus.svg" alt="On Campus icon" /></a></li>
-                <li><a href=""><img src="./images/ic-online.svg" alt="Online icon" /></a></li>
-                <li><a href=""><img src="./images/ic-login.svg" alt="Login icon" /></a></li>
-            </ul>
-        </nav>
-     </header>
-
-     <main>
-    <!-- Hero Section -->
-    <section class="hero-container">
+    <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,700,700i&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <header>
+      <!-- Navbar Section -->
+      <nav>
+        <div class="logo">
+          <img src="./images/ic-logo.svg" alt="Colmar academy logo" />
+          <p>Colmar</p><span>Academy</span>
+        </div>
+        <ul>
+          <a href="#"><li>On Campus</li></a>
+          <a href="#"><li>Online</li></a>
+          <a href="#"><li>For companies</li></a>
+          <a href="#"><li>Sign in</li></a>
+        </ul>
+        <div class="mobile-nav">
+          <a href="#"
+            ><img src="./images/ic-logo.svg" alt="Colmar academy logo"
+          /></a>
+          <a href="#"
+            ><img src="./images/ic-on-campus.svg" alt="On Campus icon"
+          /></a>
+          <a href=""><img src="./images/ic-online.svg" alt="Online icon" /></a>
+          <a href=""><img src="./images/ic-login.svg" alt="Login icon" /></a>
+        </div>
+      </nav>
+    </header>
+    
+    <main>
+      <!-- Hero Section -->
+      <section class="hero-container">
         <div class="hero-left">
-            <img src="/images/banner.jpg" alt="three people sitting togethrt" /> 
+          <img src="./images/banner.jpg" alt="Banner img" />
         </div>
         <div class="hero-right">
-            <h1 class="hero-title">Learn something new everyday</h1>
-            <p class="hero-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="#" class="hero-btn">Start here</a>
+          <h1>Learn Something new everyday</h1>
+          <h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h4>
+          <a href=""><button>Start here</button></a>
         </div>
-    </section>
+      </section>
 
-    <!-- Info Section -->
-    <section class="info-container">
+      <!-- Info Section -->
+      <section class="info-container">
         <article class="info-left">
-            <div class="info-left-image">
-                <img src="/images/information-main.jpg" alt="men-redding-a-book" />
-            </div>
-            <div class="info2-left">
-                <h2 class="info-left">It doesn't hurt to keep practicing</h2>
-                <p class="info-description"> "Curavito vitae libero in ipsum porttitor consequat. 
-                    Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. 
-                    Phasellus sed consequat ex. Etiam eget magna laoreet, efficur dolor consequat, 
-                    tristique ligula."</p>
-                <p class="info-writer"> Emanuel, Sr Strategist at Hiring.com </p>
-            </div>
+          <img src="./images/information-main.jpg" />
+          <div class="info-left-title">
+            <h2>It doesn't hurt to keep practicing</h2>
+            <p>
+              "Curabitur vitae libero in ipsum porttitor consequat. Aliquam and
+              commodo lectus, nec consequat neque. Sed non accumsan urna.
+              Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur
+              dolor consequat, tristique ligula."
+            </p>
+            <p>Emanuel, Sr Strategist at Hiring.com</p>
+          </div>
         </article>
-        <div class="info-right">
-            <ul class="info-container">
-                <!-- Orientation -->
-                <li>
-                    <div class="info-right-img">
-                        <img class="info-right-img-desktop" src="images/information-orientation.jpg" alt="walking-people" />
-                        <img class="info-right-img-mobile" src="images/information-orientation-mobile.jpg" alt="walking-people" />
-                    </div>
-                    <div class="info-right-content">
-                        <h3 class="info-right-tittle">Orientation data</h3>
-                        <p class="info-right-description">Tue 10/11 & Wed 10/12: 8am-3pm</p>
-                    </div>
-                        <a class="info-right-link" href="#">Read more</a>  
-                </li>
-                <!-- Campus -->
-                <li>
-                    <div class="info-right-img">
-                        <img class="info-right-img-desktop" src="images/information-campus.jpg" alt="class-room" />
-                        <img class="info-right-img-mobile" src="images/information-campus-mobile.jpg" alt="class-room" />
-                    </div>
-                    <div class="info-right-content">
-                        <h3 class="info-right-tittle">Our campus</h3>
-                        <p class="info-right-description">Find which campus is close by</p>
-                    </div>
-                        <a class="info-right-link" href="#">Read more</a>  
-                </li>
-                <!-- Guest -->
-                <li>
-                    <div class="info-right-img">
-                        <img class="info-right-img-desktop" src="images/information-guest-lecture.jpg" alt="lecture" />
-                        <img class="info-right-img-mobile" src="images/information-guest-lecture-mobile.jpg" alt="lecture" />
-                    </div>
-                    <div class="info-right-content">
-                        <h3 class="info-right-tittle">Our guest lecture</h3>
-                        <p class="info-right-description">Join a keynote with Oliver Sack about music in medical treatment</p>
-                    </div>
-                        <a class="info-right-link" href="#">Read more</a>  
-                </li>
-            </ul>
-        </div>
+
+        <section class="info-right">
+          <!-- Orientation -->
+          <div class="orientation">
+            <div class="orientation-img">
+              <img
+                class="orientation-left-desktop" src="./images/information-orientation.jpg" alt="orientation" />
+              <img
+                class="orientation-left-mobile" src="./images/information-orientation-mobile.jpg" alt="orientation" />
+            </div>
+            <div class="orientation-info">
+              <h4>Orientation data</h4>
+              <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+              <button><a href="">Read more</a></button>
+            </div>
+          </div>
+          <!-- Campus -->
+          <div class="campus">
+            <div class="campus-img">
+              <img
+                src="./images/information-campus.jpg" alt="campus" class="campus-left-desktop"
+              />
+              <img
+                src="./images/information-campus-mobile.jpg" alt="campus" class="campus-left-mobile"
+              />
+            </div>
+            <div class="campus-info">
+              <h4>Our campus</h4>
+              <p>Find which campus is close by you</p>
+              <button><a href="">Read more</a></button>
+            </div>
+          </div>
+          <!-- Guest -->
+          <div class="guest">
+            <div class="guest-img">
+              <img
+                class="guest-left-desktop" src="./images/information-guest-lecture.jpg" alt="guest"
+              />
+              <img
+                class="guest-left-mobile" src="./images/information-guest-lecture-mobile.jpg" alt="guest"
+              />
+            </div>
+            <div class="guest-info">
+              <h4>Our guest lecture</h4>
+              <p>
+                Join a keynote with Oliver Sack about music in medical treatment
+              </p>
+              <button><a href="">Read more</a></button>
+            </div>
+          </div>
+        </section>
     </section>
 
-    <!-- Course Section -->
-     <section class="course-container">
-        <h1 class="c-grid-wrapper"> </h1>
-            <!-- Software engineering -->
-            <div class="c-1">
-                <div class="c-img">
-                    <img src="images/course-software.jpg" alt="" />
-                </div>
-                <div class="c-info">
-                    <h4>Software engineering</h4>
-                    <p>COURSES</p>
-                    <p>Web development</p>
-                </div>
+    <!-- Courses Section -->
+    <section class="c-container">
+        <h1>Start learning</h1>
+        <div class="c-grid-wrapper">
+          <div class="c-1">
+            <div class="c-img">
+              <img
+                src="./images/course-software.jpg"
+                alt="Two computer screen on a table"
+              />
             </div>
-            <!-- Computer art -->
-            <div class="c-2">
-                <div class="c-img">
-                    <img src="images/course-computer-art.jpg" alt="" />
-                </div>
-                <div class="c-info">
-                    <h4>Computer art</h4>
-                    <p>COURSES</p>
-                    <p>Imaging & Design, Web Design</p>
-                </div>
+            <div class="c-info">
+              <h4>Software engineering</h4>
+              <p>COURSES</p>
+              <p>Web Development, Mobile Development, iOT, APIs</p>
             </div>
-            <!-- Design -->
-            <div class="c-3">
-                <div class="c-img">
-                    <img src="images/course-design.jpg" alt="" />
-                </div>
-                <div class="c-info">
-                    <h4>Design</h4>
-                    <p>COURSES</p>
-                    <p>UX/UI Design</p>
-                </div>
+          </div>
+          <div class="c-2">
+            <div class="c-img">
+              <img
+                src="./images/course-computer-art.jpg"
+                alt="Someone holding a mobile phone and another drinking coffee"
+              />
             </div>
-            <!-- Data -->
-            <div class="c-4">
-                <div class="c-img">
-                    <img src="images/course-data.jpg" alt="" />
-                </div>
-                <div class="c-info">
-                    <h4>Data</h4>
-                    <p>COURSES</p>
-                    <p>Data Science, Big Data,</p>
-                </div>
+            <div class="c-info">
+              <h4>Computer art</h4>
+              <p>COURSES</p>
+              <p>Web Development, Mobile Development, iOT, APIs</p>
             </div>
-            <!-- Business -->
-            <div class="c-5">
-                <div class="c-img">
-                    <img src="images/course-business.jpg" alt="" />
-                </div>
-                <div class="c-info">
-                    <h4>Business</h4>
-                    <p>COURSES</p>
-                    <p>Product Development, Business Development, Startup</p>
-                </div>
+          </div>
+          <div class="c-3">
+            <div class="c-img">
+              <img
+                src="./images/course-design.jpg"
+                alt="A person holding a camera"
+              />
             </div>
-            <!-- Marketing -->
-            <div class="c-6">
-                <div class="c-img">
-                    <img src="images/course-marketing.jpg" alt="" />
-                </div>
-                <div class="c-info">
-                    <h4>Marketing</h4>
-                    <p>COURSES</p>
-                    <p>Analytics, Content Marketing, Mobile Marketing</p>
-                </div>
+            <div class="c-info">
+              <h4>Design</h4>
+              <p>COURSES</p>
+              <p>User Experience Design, User Research, Visual Design</p>
             </div>
-     </section>
-     <!-- Thesis Section -->
-      <section class="thesis-container">
+          </div>
+          <div class="c-4">
+            <div class="c-img">
+              <img
+                src="./images/course-data.jpg"
+                alt="A laptop with dashboard statistic displayed on screen"
+              />
+            </div>
+            <div class="c-info">
+              <h4>Data</h4>
+              <p>COURSES</p>
+              <p>Data Science, Big Data, SQL, Data Visualization</p>
+            </div>
+          </div>
+          <div class="c-5">
+            <div class="c-img">
+              <img
+                src="./images/course-business.jpg"
+                alt="Chess pieces on a table"
+              />
+            </div>
+            <div class="c-info">
+              <h4>Business</h4>
+              <p>COURSES</p>
+              <p>Product Development, Business Development, Startup</p>
+            </div>
+          </div>
+          <div class="c-6">
+            <div class="c-img">
+              <img
+                src="./images/course-marketing.jpg"
+                alt="Someone using apple watch wrapped around their wrist"
+              />
+            </div>
+            <div class="c-info">
+              <h4>Marketing</h4>
+              <p>COURSES</p>
+              <p>Analytics, Content Marketing, Mobile Marketing</p>
+            </div>
+          </div>
+        </div>
+        <div class="sl-mobile">
+          <a href=""
+            ><div class="sl-1-mobile">
+              <h1>Software engineering</h1>
+            </div></a
+          >
+          <a href="">
+            <div class="sl-2-mobile">
+              <h1>Computer art</h1>
+            </div></a>
+          <a href="">
+            <div class="sl-3-mobile">
+              <h1>Design</h1>
+            </div></a>
+          <a href=""><div class="sl-4-mobile"><h1>Data</h1></div></a>
+          <a href=""><div class="sl-5-mobile"><h1>Business</h1></div></a>
+          <a href=""><div class="sl-6-mobile"><h1>Marketing</h1></div></a>
+        </div>
+      </section>
+       <!-- Thesis Section -->
+       <section class="thesis-container">
         <h1>Thesis exhibit</h1>
         <div class="thesis-grid">
-            <div class="reimagine-video">
-                <div class="thesis-left-video">
-                    <video src="videos/thesis.mp4" controls></video> 
-                </div>
-                <div class="reimagine">
-                    <h4>Reimagine urban</h4>
-                    <p>"Curavito vitae libero in ipsum porttitor consequat. 
-                        Aliquam et commodo lectus, nec consequat neque. 
-                        Sed non accumsan urna. Phasellus sed consequat ex. 
-                        Etiam eget magna laoreet, efficur dolor consequat, 
-                        tristique ligula."
-                    </p>
-                </div>
+          <article class="urban-container">
+            <div class="urban-video">
+              <video src="./videos/thesis.mp4" controls></video>
             </div>
-            <div class="thesis-container-right">
-                <!-- Fisma -->
-                <div class="fisma">
-                        <div class="fish-img">
-                            <img src="images/thesis-fisma.jpg" alt="Someone highlighting text on paper" />
-                        </div>
-                        <div class="fisma-info">
-                            <h4>Fisma: Design and Prototype</h4>
-                            <p>Designer showcase</p>
-                        </div>            
-                </div>
-
-                <!-- Now Then -->
-                <div class="now-then">
-                    <div class="now-then-img">
-                        <img src="images/thesis-now-and-then.jpg" alt="Someone highlighting text on paper" />
-                    </div>
-                    <div class="now-then-info">
-                        <h4>Now and then</h4>
-                        <p>Research study about New York</p>
-                    </div>            
-                </div>
+            <div class="urban-info">
+              <h4>Reimagine urban</h4>
+              <p>
+                "Curabitur vitae libero in ipsum porttitor consequat. Aliquam et
+                commodo lectus, nec consequat neque. Sed non accumsan urna.
+                Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur
+                dolor consequat, tristique ligula."
+              </p>
             </div>
+          </article>
+          <article class="other-thesis-container">
+            <div class="fisma">
+              <div class="fisma-img">
+                <img
+                  src="./images/thesis-fisma.jpg"
+                  alt="Someone highlighting text on paper"
+                />
+              </div>
+              <div class="fisma-info">
+                <h4>Fisma: Design and Prototype</h4>
+                <p>Designer showcase of new prototype product</p>
+              </div>
+            </div>
+            <div class="now-and-then">
+              <div class="nt-img">
+                <img
+                  src="./images/thesis-now-and-then.jpg" alt="Image of empire state building"
+                />
+              </div>
+              <div class="nt-info">
+                <h4>Now and then</h4>
+                <p>Research study about New York</p>
+              </div>
+            </div>
+          </article>
         </div>
-    </section>
-
-    <!-- Footer Section -->
+      </section>
+    </main>
     <footer>
         <p>@ 2016 Colmar Academy. All rights reserved</p>
         <ul>
-            <a href=""><li>Terms</li></a>
-            <a href=""><li>Privacy</li></a>
+          <a href=""><li>Terms</li></a>
+          <a href=""><li>Privacy</li></a>
         </ul>
-    </footer>
-     </main>
-</body>
+      </footer>
+  </body>
 </html>
-
-
-
